<resources>
    <string name="twitter_consumer_key">PMaXXwKWEIEpkXrSNDN5cfZ6v</string>
    <string name="twitter_consumer_secret">px6gplktWiIwwcaq859tow4ppsixTClgo4yI8jaMLTJQrqufbr</string>
    <string name="nav_drawer_title">Money 20/20 Hackathon</string>
    <string name="nav_drawer_subtitle">Welcome!</string>
    <string name="app_name">brick&amp;more</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_drawer_events">Events</string>
    <string name="nav_drawer_employees">Employees</string>
    <string name="nav_drawer_campaigns">Campaigns</string>
    <string name="nav_drawer_social">Social</string>
    <string name="nav_drawer_transaction">Transactions</string>
    <string name="title_activity_campaigns">Campaigns</string>
    <string name="title_activity_create_campaign">Create a Campaign</string>

    <string name="edit_text_title">Campaign Title</string>
    <string name="edit_text_description">Description</string>
    <string name="edit_text_address">Target Street Address</string>
    <string name="edit_text_city">City</string>
    <string name="edit_text_state">State</string>
    <string name="edit_text_daily_budget">Daily Budget ($)</string>
    <string name="radius">Radius (mi.)</string>
    <string name="create_campaign">Create Campaign</string>

    <string name="card_tweet">Tweet</string>
    <string name="card_campaign">Start Campaign</string>
    <string name="title_activity_campaign_details">Campaign Details</string>
</resources>
