<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_create_campaign"
    tools:context="com.marcussjolin.money2020.CreateCampaignActivity">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/create_campaign_margin_top"
        android:hint="@string/edit_text_title"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/create_campaign_margin_top"
        android:layout_marginLeft="@dimen/create_campaign_margin_top"
        android:layout_marginRight="@dimen/create_campaign_margin_top"
        android:minLines="3"
        android:hint="@string/edit_text_description"/>

    <EditText
        android:id="@+id/target_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/create_campaign_margin_top"
        android:hint="@string/edit_text_address"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/target_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/create_campaign_margin_top"
            android:layout_marginBottom="@dimen/create_campaign_margin_top"
            android:layout_marginLeft="@dimen/create_campaign_margin_top"
            android:hint="@string/edit_text_city"/>

        <EditText
            android:id="@+id/target_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/create_campaign_margin_top"
            android:layout_marginBottom="@dimen/create_campaign_margin_top"
            android:layout_marginRight="@dimen/create_campaign_margin_top"
            android:hint="@string/edit_text_state"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/radius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/create_campaign_margin_top"
            android:layout_marginBottom="@dimen/create_campaign_margin_top"
            android:layout_marginLeft="@dimen/create_campaign_margin_top"
            android:hint="@string/radius"/>

        <EditText
            android:id="@+id/daily_budget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/create_campaign_margin_top"
            android:layout_marginBottom="@dimen/create_campaign_margin_top"
            android:layout_marginRight="@dimen/create_campaign_margin_top"
            android:hint="@string/edit_text_daily_budget"/>

    </LinearLayout>

    <Button
        android:id="@+id/create_campaign_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/create_campaign_margin_top"
        android:layout_marginLeft="@dimen/create_campaign_margin_top"
        android:layout_marginTop="@dimen/create_campaign_margin_top"
        android:text="@string/create_campaign"
        android:textColor="@color/white"
        android:background="@drawable/button_ripple"/>

</LinearLayout>
